--- a/Tolu_project/accountpage.html
+++ b/Tolu_project/accountpage.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="history.css">
 </head>
-<body>
-    <nav>
+<body >
+    <nav style="background-color:#FED55F">
   <label class="logo">EDO-DRIVE</label>
   <ul>
     <li><a href="index.html">HOME</a></li>
@@ -20,17 +20,17 @@
     <li><a href="login.html">Logout</a></li>
   </ul>
 </nav>
-    <div class="wrapper rounded">
-    <nav class="navbar navbar-expand-lg navbar-dark dark d-lg-flex align-items-lg-start"> <a class="navbar-brand" href="#">Account Page <p class="text-muted pl-1"></p> </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+    <div  class="wrapper rounded">
+    <nav style="font-weight:bolder"  class="navbar navbar-expand-lg navbar-light light d-lg-flex align-items-lg-start"> <a class="navbar-brand" href="#">Account Page <p class="text-muted pl-1"></p> </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-lg-auto">
                 <li class="nav-item"> <a class="nav-link" href="#"><span class="fa fa-bell-o font-weight-bold"></span> <span class="notify">Notifications</span> </a> </li>
-                <li class="nav-item "> <a href="#"><span class="fa fa-search"></span></a> <input type="search" class="dark" placeholder="Search"> </li>
+                <li class="nav-item "> <a href="#"><span class="fa fa-search"></span></a> <input type="search" class="light" placeholder="Search"> </li>
             </ul>
         </div>
     </nav>
-    <div class="row mt-2 pt-2">
-        <div class="col-md-6" id="income">
+    <div  class="row mt-2 pt-2">
+        <div  class="col-md-6" id="income">
             <div class="d-flex justify-content-start align-items-center">
             </div>
         </div>
@@ -45,8 +45,8 @@
             <li class="nav-item"> <a class="nav-link" href="#"></a> </li>
         </ul> <button class="btn btn-primary"></button>
     </div>
-    <div class="table-responsive mt-3">
-        <table class="table table-dark table-borderless">
+    <div  class="table-responsive mt-3">
+        <table class="table  table- font-weight-bold">
             <thead>
                 <tr>
                     <th scope="col">Activity</th>
@@ -54,7 +54,7 @@
                     
                 </tr>
             </thead>
-            <tbody>
+            <tbody >
                 <tr>
                     <td scope="row"> <span><img style="height:30px" src="user.png"></span>Chike Ogbonna </td>
                     
@@ -89,9 +89,9 @@
             </tbody>
         </table>
     </div>
-    <div class="d-flex justify-content-between align-items-center results"> <span class="pl-md-3">Showing<b class="text-white"> 1-5 0f 200 </b>Users</span>
+    <div  class="d-flex justify-content-between align-items-center results"> <span style="color:black;font-weight: bolder;" class="pl-md-3">Showing<b style="color:black;font-weight: bolder;" class="text-black"> 1-5 0f 200 </b>Users</span>
         <div  class="pt-3" class="pt-2" class="mb-6" class="major" >
-            <nav style="background-color:#222222"  aria-label="Page navigation example">
+            <nav style="background-color:white"  aria-label="Page navigation example">
                 <ul  class="pagination">
                     <li class="page-item disabled"> <a class="page-link" href="#" aria-label="Previous"> <span aria-hidden="true">&lt;</span> </a> </li>
                     <li class="page-item"> <a class="page-link" href="#" aria-label="Next"> <span aria-hidden="true">&gt;</span> </a> </li>
