--- a/Tolu_project/History.html
+++ b/Tolu_project/History.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="history.css">
 </head>
 <body>
-    <nav>
+    <nav style="background:#FED55F">
   <label class="logo">EDO-DRIVE</label>
   <ul>
     <li><a href="index.html">HOME</a></li>
@@ -21,11 +21,11 @@
   </ul>
 </nav><br><br>
 	<div class="wrapper rounded">
-    <nav class="navbar navbar-expand-lg navbar-dark dark d-lg-flex align-items-lg-start"> <a class="navbar-brand" href="#">Transactions <p class="text-muted pl-1">Welcome to your transactions</p> </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+    <nav class="navbar navbar-expand-lg navbar-light light d-lg-flex align-items-lg-start"> <a class="navbar-brand" href="#">Transactions <p class="text-muted pl-1">Welcome to your transactions</p> </a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-lg-auto">
                 <li class="nav-item"> <a class="nav-link" href="#"><span class="fa fa-bell-o font-weight-bold"></span> <span class="notify">Notifications</span> </a> </li>
-                <li class="nav-item "> <a href="#"><span class="fa fa-search"></span></a> <input type="search" class="dark" placeholder="Search"> </li>
+                <li class="nav-item "> <a href="#"><span style="background:white" class="fa fa-search"></span></a> <input type="search" class="light" placeholder="Search"> </li>
             </ul>
         </div>
     </nav>
@@ -46,53 +46,53 @@
         </ul> <button class="btn btn-primary">New Transaction</button>
     </div>
     <div class="table-responsive mt-3">
-        <table class="table table-dark table-borderless">
+        <table class="table table-light table-borderless">
             <thead>
-                <tr>
-                    <th scope="col">Activity</th>
-                    <th scope="col">Mode</th>
-                    <th scope="col">Date</th>
-                    <th scope="col" class="text-right">Amount</th>
+                <tr >
+                    <th style="font-weight: bolder;color: black;" scope="col">Activity</th>
+                    <th style="font-weight: bolder;color: black;" scope="col">Mode</th>
+                    <th style="font-weight: bolder;color: black;" scope="col">Date</th>
+                    <th style="font-weight: bolder;color: black;" scope="col" class="text-right">Amount</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td scope="row"> <span class="fa fa-exchange mr-1"></span> Adekunle </td>
-                    <td><span class="fa fa-cc-visa"></span></td>
-                    <td class="text-muted">12 Jul 2021, 12:30 PM</td>
+                    <td><span class="fa fa-cc-visa dark"></span></td>
+                    <td style="font-weight: bolder;color: black;" class="text-muted">12 Jul 2021, 12:30 PM</td>
                     <td class="d-flex justify-content-end align-items-center">  #700 </td>
                 </tr>
                 <tr>
                     <td scope="row"> <span class="fa fa-exchange mr-1"></span> Bayo Adekunle</td>
-                    <td><span class="fa fa-cc-mastercard"></span></td>
-                    <td class="text-muted">11 Jul 2021, 7:10 AM</td>
+                    <td><span class="fa fa-cc-mastercard dark"></span></td>
+                    <td style="font-weight: bolder;color: black;" class="text-muted">11 Jul 2021, 7:10 AM</td>
                     <td class="d-flex justify-content-end align-items-center"></span> #700 </td>
                 </tr>
                   <tr>
-                    <td scope="row"> <span class="fa fa-exchange mr-1"></span> Adekunle </td>
+                    <td scope="row"> <span class="fa fa-exchange mr-1 dark"></span> Adekunle </td>
                     <td><span class="fa fa-cc-visa"></span></td>
-                    <td class="text-muted">12 Jul 2021, 12:30 PM</td>
+                    <td style="font-weight: bolder;color: black;" class="text-muted">12 Jul 2021, 12:30 PM</td>
                     <td class="d-flex justify-content-end align-items-center">  #700 </td>
                 </tr>
                  <tr>
-                    <td scope="row"> <span class="fa fa-exchange mr-1"></span> Adekunle </td>
+                    <td scope="row"> <span class="fa fa-exchange mr-1 dark"></span> Adekunle </td>
                     <td><span class="fa fa-cc-mastercard"></span></td>
                     <td class="text-muted">12 Jul 2021, 12:30 PM</td>
                     <td class="d-flex justify-content-end align-items-center">  #700 </td>
                 </tr>
                 <tr>
-                    <td scope="row"> <span class="fa fa-exchange mr-1"></span> Bayo Adekunle </td>
+                    <td scope="row"> <span class="fa fa-exchange mr-1 dark"></span> Bayo Adekunle </td>
                     <td><span class="fa fa-cc-visa"></span></td>
-                    <td class="text-muted">18 Jul 2021, 7:30 AM</td>
+                    <td style="font-weight: bolder;color: black;" class="text-muted">18 Jul 2021, 7:30 AM</td>
                     <td class="d-flex justify-content-end align-items-center"> </span> #850 </td>
                 </tr>
                
             </tbody>
         </table>
     </div>
-    <div class="d-flex justify-content-between align-items-center results"> <span class="pl-md-3">Showing<b class="text-white"> 1-5 0f 200 </b> trasactions</span>
+    <div class="d-flex justify-content-between align-items-center results"> <span class="pl-md-3" style="font-weight: bolder;color: black;">Showing<b class="text-white" style="font-weight: bolder;color: black;"> 1-5 0f 200 </b> trasactions</span>
         <div class="pt-3">
-            <nav style="background: #222222;" aria-label="Page navigation example">
+            <nav style="background: white;" aria-label="Page navigation example">
                 <ul class="pagination">
                     <li class="page-item disabled"> <a class="page-link" href="#" aria-label="Previous"> <span aria-hidden="true">&lt;</span> </a> </li>
                     <li class="page-item"> <a class="page-link" href="#" aria-label="Next"> <span aria-hidden="true">&gt;</span> </a> </li>
